syntax = "proto3";

package roshan.chat;

import "google/api/annotations.proto";
// import "options/authorization_required.proto";
import "user/user.proto";

option go_package = "github.com/bozoteam/roshan/adapter/grpc/gen/chat;gen";

message Room {
  string id = 1;
  string creator_id = 2;
  repeated roshan.user.User users = 3;
}

message SendMessageRequest {
  string content = 1;
  string room_id = 2;
}

message SendMessageResponse {}

message CreateRoomRequest {
  string name = 1;
}

message CreateRoomResponse {
  string room_id = 1;
}

message ListRoomsRequest {}

message ListRoomsResponse {
  repeated Room rooms = 1;
}

message DeleteRoomRequest {
  string id = 1;
}

message DeleteRoomResponse {
  Room room = 1;
}

service ChatService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {
    option (google.api.http) = {
      post: "/api/v1/chat/rooms/message"
      body: "*"
    };
  }
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse) {
    option (google.api.http) = {
      post: "/api/v1/chat/rooms"
      body: "*"
    };
  }
  rpc ListRooms(ListRoomsRequest) returns (ListRoomsResponse) {
    option (google.api.http) = {get: "/api/v1/chat/rooms"};
  }
  rpc DeleteRoom(DeleteRoomRequest) returns (DeleteRoomResponse) {
    option (google.api.http) = {delete: "/api/v1/chat/rooms/{id}"};
  }
}
